# gravitas

./: CMakeLists.txt  README.md
scripts/: build.sh  run.sh
src/: drawable.cpp  drawable.hpp  entity.cpp  entity.hpp  main.cpp  object.cpp  object.hpp  player.cpp  player.hpp
